# voice2mr

./: .gitignore  LICENSE  README.md  change_logs.md  current_plan.md  issues.md  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  requirements.txt
app/: __init__.py  jcdss.py  main.py
app/api/routes/: __init__.py  cdss.py  medical_records.py
app/core/: config.py  dependencies.py  logging.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  asr.py  llm.py  ocr.py
cdss/: .env.example  hotwords.txt  main.py  pyproject.toml  pytest.ini  requirements.txt
cdss/src/app/: __init__.py  __main__.py
cdss/src/app/api/models/: request_models.py  response_models.py
cdss/src/app/api/routes/: chat.py  medical_records.py  server_info.py
cdss/src/app/core/: config.py  exceptions.py  i18n.py
cdss/src/app/services/: asr.py  llm.py  medical_record.py  ocr.py
cdss/tests/: conftest.py
cdss/tests/unit/core/: test_config.py  test_i18n.py
cdss/tests/unit/services/: test_llm.py  test_medical_record.py
docs/: change_logs.md  current_plan.md  issues.md  testplans.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Chatbox.tsx  FileUploader.tsx
medai/: .gitignore  next.config.js  package-lock.json  package.json  playwright.config.ts
medai/public/: offline.html  service-worker.js
medai/src/: middleware.ts
medai/test-results/: .last-run.json
medai/tests/: chat-medical-record.spec.ts  e2e-pwa.spec.ts  home.spec.ts  visual.spec.ts
src/app/: layout.tsx
tests/: home.spec.ts  test_ollama.py
tests/minimal-next-test/: package.json
(+34 files in other folders)
